Criando Dockerfile e ajustando configs

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>apple-academy-api</finalName>
     </build>
 
 </project>
